[package]
name = "carusbaad"
version = "0.1.0"
authors = ["nexos"]
edition = "2018"
readme = "README.md"
description = "Car USB Accessory Mode"

[dependencies]
libusb="0.3.0"
webpki="0.19.1"
bytes = "0.4.12"
prost = "0.5.0"
hex = "0.3.2"
log = ""
chrono = ""
env_logger = ""

[dependencies.rustls]
version = "0.15.2"
features = ["logging"]

[build-dependencies]
prost-build = { version = "0.5.0" }

[profile.release]
lto = true
panic = 'abort'
debug = false
debug-assertions = false

[package.metadata.deb]
depends = "udev"
extended-description = """\
car aa
"""

assets = [
    ["target/x86_64-unknown-linux-gnu/release/carusbaad", "usr/bin/carusbaad", "755"],
    ["udev.rules", "lib/udev/rules.d/99-carusbaad.rules", "644"],
    ["README.md", "usr/share/doc/carusbaad/README.md", "755"]
]