[package]
name = "carusbaad"
version = "0.1.0"
authors = ["nexos"]
edition = "2018"
readme = "README.md"
description = "Car USB Accessory Mode"

[dependencies]
libusb=""
webpki=""
bytes = ""
prost = ""
hex = ""
log = ""
chrono = ""
env_logger = ""
webpki-roots = ""
native-tls = ""
openssl-sys = ""
openssl = ""

[dependencies.rustls]
version = ""
features = ["logging", "dangerous_configuration"]

[build-dependencies]
prost-build = { version = "" }
#protoc-rust = "2.0"
# proto-codegen-pure = "2.3"
# protobuf-codegen-pure = {git = "https://github.com/stepancheg/rust-protobuf.git" }

[profile.release]
lto = true
panic = 'abort'
debug = false
debug-assertions = false

[package.metadata.deb]
depends = "udev systemd"
extended-description = """\
car aa
"""

assets = [
    ["target/x86_64-unknown-linux-gnu/release/carusbaad", "usr/bin/carusbaad", "755"],
    ["udev.rules", "lib/udev/rules.d/99-carusbaad.rules", "644"],
    ["README.md", "usr/share/doc/carusbaad/README.md", "755"]
]
