[package]
name = "carusbaad"
version = "0.1.0"
authors = ["nexos"]
edition = "2018"
readme = "README.md"
description = "Car USB Accessory Mode"

[dependencies]
libusb="0.3.0"
webpki="0.21.2"
bytes = "1.0.1"
prost = "0.7.0"
hex = "0.4.3"
log = "0.4.14"
chrono = "0.4.19"
env_logger = "0.8.4"
webpki-roots = "0.22.0"
native-tls = "0.2.7"
openssl-sys = "0.9.63"
openssl = "0.10.34"

[dependencies.rustls]
version = "0.19.1"
features = ["logging", "dangerous_configuration"]

#[build-dependencies]
#prost-build = { version = "" }
#protoc-rust = "2.0"
# proto-codegen-pure = "2.3"
# protobuf-codegen-pure = {git = "https://github.com/stepancheg/rust-protobuf.git" }

[profile.release]
lto = true
panic = 'abort'
debug = false
debug-assertions = false

[package.metadata.deb]
depends = "udev systemd"
extended-description = """\
car aa
"""

assets = [
    ["target/x86_64-unknown-linux-gnu/release/carusbaad", "usr/bin/carusbaad", "755"],
    ["udev.rules", "lib/udev/rules.d/99-carusbaad.rules", "644"],
    ["README.md", "usr/share/doc/carusbaad/README.md", "755"]
]
